# tools

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.rst  django.cfg  fabfile.py  generate_python_docs.py  generate_shell_docs.py  install_local_checkouts.sh  install_shell_scripts.sh  newvanreesorg.cfg  osx.cfg  pyproject.toml  requirements.txt  requirements_osx.txt  setup.cfg  setup.py  vm.cfg  vmware.cfg
.github/workflows/: test.yml
shell/: README.rst  bdr  bzrdiff  create_git_repo.sh  create_postgis_db  dos2unix.py  drm  duh  editexternals  editignores  emacsclient-from-iterm  es  et  filefind  fixopenwith  fixvagrantnetwork  git-undelete  hadolint  headdiff  hgdiff  hglog  makegitdir.sh  md-to-doc  md-to-html  md-to-pdf  projectile-beautiful  projectile-compile  projectile-make  projectile-test  pychecker.sh  restic-backup  restic-with-env  run-with-env.sh  ssh-copy-id  svndiff  svngrep  syncweblog.sh  unspace  vlog
tools/: README.rst  add_time.py  blog.py  dtname.py  engineerlog.py  git.py  github.py  jshint.py  jsonformatter.py  mkinit.py  naw.py  python_coding_cleanup.py  sommen.py  thunderbird.py  timelog.py  vagrant.py  week.py
