[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tools"
version = "0.1.dev0"
description = "Tools and scripts for Reinout"
authors = [
    {name = "Reinout van Rees", email = "reinout@vanrees.org"},
]
readme = "README.rst"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools]
packages = ["tools"]

[project.scripts]
add_time = "tools.add_time:main"
copytoblog = "tools.blog:copytoblog"
dtname = "tools.dtname:main"
fixthunderbird = "tools.thunderbird:fix_thunderbird"
gac = "tools.git:main"
gh = "tools.github:main"
latestentries = "tools.blog:list_todays_entries"
log = "tools.engineerlog:main"
makedocs = "tools.blog:makedocs"
mkinit = "tools.mkinit:main"
new_sermon = "tools.blog:new_sermon"
python_coding_cleanup = "tools.python_coding_cleanup:main"
sommen = "tools.sommen:main"
week = "tools.week:main"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "C901"]
